unpackaged/main/default/objects/NF_ACH_Info__c/NF_ACH_Info__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NF ACH Info</label>
</CustomObject>