unpackaged/main/default/objects/NF_ACH_Info__c/fields/ACH_ID__c.field-meta.xml
<CustomField>
    <fullName>ACH_ID__c</fullName>
    <description>Field 7(Company Identification) in the Batch Control Record.</description>
    <inlineHelpText>Field 7(Company Identification) in the Batch Control Record.</inlineHelpText>
    <label>ACH ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>