unpackaged/main/default/objects/NF_ACH_Info__c/fields/Bank_ACH_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_ACH_Code__c</fullName>
    <description>This field corresponds to the Field 5(Company Identification) in the Batch Header Record.</description>
    <label>Bank ACH Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>