unpackaged/main/default/objects/NF_ACH_Info__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>23</length>
    <type>Text</type>
</CustomField>