unpackaged/main/default/objects/NF_ACH_Info__c/fields/Bank_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Location__c</fullName>
    <label>Bank Location</label>
    <length>8</length>
    <type>Text</type>
</CustomField>