unpackaged/main/default/objects/NF_ACH_Info__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>23</length>
    <type>Text</type>
</CustomField>