unpackaged/main/default/objects/NF_ACH_Info__c/fields/Bank_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Short_Name__c</fullName>
    <label>Bank Short Name</label>
    <length>23</length>
    <type>Text</type>
</CustomField>