unpackaged/main/default/objects/NF_ACH_Info__c/fields/Company_Entry_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Entry_Description__c</fullName>
    <description>This field will contain a description of the ACH transaction.</description>
    <inlineHelpText>This field will contain a description of the ACH transaction.</inlineHelpText>
    <label>Company Entry Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>