unpackaged/main/default/objects/NF_ACH_Info__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>