unpackaged/main/default/objects/NF_ACH_Info__c/fields/Days_in_Advance_to_Create_File__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Advance_to_Create_File__c</fullName>
    <label># Days in Advance to Create File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>