unpackaged/main/default/objects/NF_ACH_Info__c/fields/Fed_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_Id__c</fullName>
    <description>This field corresponds to the Field 4(Immediate Origin) in the File Header Record</description>
    <label>Fed Tax Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>