unpackaged/main/default/objects/NF_ACH_Info__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <label>Routing_Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>