unpackaged/main/default/objects/NF_ACH_Info__c/fields/Settlement_Delay_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Delay_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Settlement Delay Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>