unpackaged/main/default/objects/NF_ACH_Info__c/fields/Settlement_in_Business_day__c.field-meta.xml
<CustomField>
    <fullName>Settlement_in_Business_day__c</fullName>
    <defaultValue>0</defaultValue>
    <description>E.g. A settlement delay of “0” means the payments will settle on the effective date</description>
    <inlineHelpText>E.g. A settlement delay of “0” means the payments will settle on the effective date</inlineHelpText>
    <label>Settlement in Business day</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>