unpackaged/main/default/objects/NF_ACH_Info__c/fields/Standard_Entry_Class__c.field-meta.xml
<CustomField>
    <fullName>Standard_Entry_Class__c</fullName>
    <label>Standard Entry Class</label>
    <length>3</length>
    <type>Text</type>
</CustomField>